[tool.poetry]
name = "graph-theory"
version = "0.1.0"
description = ""
authors = ["haritaku"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
networkx = "^2.5.1"
Sphinx = "^4.0.2"
recommonmark = "^0.7.1"
sphinx-rtd-theme = "0.5.2"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.16"
flake8 = "^3.9.2"
autopep8 = "^1.5.7"
pytest = "^6.2.4"
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
